@@ -21,6 +21,7 @@ import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
 import java.util.Arrays;
+import java.util.List;
 
 @Configuration
 @EnableWebSecurity
@@ -78,14 +79,13 @@ public class SecurityConfig {
                         "/**/auth/verification/**",
                         "/**/auth/signin",
                         "/**/auth/oauth2/**",
-                        "/**/success/**",
-                        "/**/fail/**",
                         "/pub/**",
                         "/sub/**",
                         "/ws/**",
                         "/env/**",
                         "/actuator/health",
-                        "/**/auth/check/**"
+                        "/**/auth/check/**",
+                        "/actuator/prometheus"
                 );
     }
 
@@ -95,18 +95,18 @@ public class SecurityConfig {
     }
 
     @Bean
-    CorsConfigurationSource corsConfigurationSource() {
+    public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
         configuration.setAllowedOrigins(Arrays.asList(
-            "http://localhost:5173",
-            "http://127.0.0.1:5173",
-            "https://zb-foodlier.vercel.app",
-            "http://ec2-15-165-55-217.ap-northeast-2.compute.amazonaws.com"
-            ));
+                "http://localhost:5173",
+                "http://127.0.0.1:5173",
+                "https://zb-foodlier.vercel.app",
+                "http://ec2-15-165-55-217.ap-northeast-2.compute.amazonaws.com"
+        ));
         configuration.setAllowCredentials(true);
-        configuration.setAllowedMethods(Arrays.asList("GET","POST", "PUT", "DELETE", "PATCH"));
-        configuration.setAllowedHeaders(Arrays.asList("*"));
-        configuration.setExposedHeaders(Arrays.asList("*"));
+        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "PATCH"));
+        configuration.setAllowedHeaders(List.of("*"));
+        configuration.setExposedHeaders(List.of("*"));
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
         return source;
